Bug 397076 - Not working properly force solid background for maximized windows and multiple monitors
Summary: Not working properly force solid background for maximized windows and multipl...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: 0.8.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-02 04:41 UTC by daltokde
Modified: 2018-08-02 11:34 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daltokde 2018-08-02 04:41:54 UTC
Force solid background for maximized windows behaves inconsistently with multiple monitors.  Sometimes, maximize a window on one monitor causes the panel on another monitor to have a solid background

Steps that created issue
Created a panel on monitor A.  Added global menu, tray & digital clock.
Created two copies on monitors B & C.
When a window was maximized on any monitor it caused all 3 to go solid.
I thought it was due to the copy so I deleted the panel from monitors A & C.
I created new, seperate panels on monitors A & C.
After this, when a window is maximized on B it only effects B but when a window is maximized on A or C it effect both A & C(but not B).
Comment 1 Michail Vourlakos 2018-08-02 11:06:37 UTC
The snapped identification mechanism is faulty because it doesnt detect touching the panel edge based on the screen in question
Comment 2 Michail Vourlakos 2018-08-02 11:26:33 UTC
Git commit 7bceb7e4b752955c0a9be79f57b0485c9271e1ef by Michail Vourlakos.
Committed on 02/08/2018 at 11:23.
Pushed by mvourlakos into branch 'master'.

Identify snapped windows independent of screen

--the old code wasnt screen independent for identifying
windows that touch the panel edge. There were cases
that when a window was touching a panel edge at
screen A to faulty identify that is touching
screen B also. The code now is more robust and it
can also handle cases that window is touching two or
more different panels in different screens.
FIXED-IN: 0.8.1

M  +16   -9    app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/7bceb7e4b752955c0a9be79f57b0485c9271e1ef
Comment 3 Michail Vourlakos 2018-08-02 11:31:29 UTC
Git commit 6f406634783c2b19a90fcad229f706a48e65cc3e by Michail Vourlakos.
Committed on 02/08/2018 at 11:28.
Pushed by mvourlakos into branch 'v0.8'.

Identify snapped windows independent of screen

--the old code wasnt screen independent for identifying
windows that touch the panel edge. There were cases
that when a window was touching a panel edge at
screen A to faulty identify that is touching
screen B also. The code now is more robust and it
can also handle cases that window is touching two or
more different panels in different screens.
FIXED-IN: 0.8.1
(cherry picked from commit 7bceb7e4b752955c0a9be79f57b0485c9271e1ef)

M  +16   -9    app/dock/visibilitymanager.cpp

https://commits.kde.org/latte-dock/6f406634783c2b19a90fcad229f706a48e65cc3e
Comment 4 Michail Vourlakos 2018-08-02 11:34:37 UTC
(In reply to daltokde from comment #0)
> 


nice.. thanks for the bug report, now it is fixed for master and v0.8.x branch it will be included in upcoming v0.8.1 around a month from now.
During the fix I also found one more bug concerning copy function, when a dock is copied in a multi-screen environment, the new dock should be added in the same edge but at a different screen first, this should also work ok now.